Fix align prices

--- a/src/pages/Buy/components/TokenList/styles.module.scss
+++ b/src/pages/Buy/components/TokenList/styles.module.scss
@@ -33,7 +33,6 @@
     .cardTitle {
       white-space: nowrap;
       font-size: 16px;
-      text-align: center;
     }
   }
 }
